--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ cmake==3.31.0.1
 colorama==0.4.6
 coloredlogs==15.0.1
 ctranslate2==4.5.0
-dlib==19.24.6
 faster-whisper==1.0.3
 filelock==3.16.1
 Flask==3.0.3
@@ -55,3 +54,4 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
 Werkzeug==3.1.3
+-e ./dlib
