--- a/requirements.txt
+++ b/requirements.txt
@@ -54,4 +54,4 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
 Werkzeug==3.1.3
--e ./dlib
+git+https://github.com/davisking/dlib.git
