--- a/requirements.txt
+++ b/requirements.txt
@@ -54,4 +54,5 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.3
 Werkzeug==3.1.3
+wheel==0.45.0
 git+https://github.com/davisking/dlib.git
